--- a/app/22busscustomer/views/adlist.html
+++ b/app/22busscustomer/views/adlist.html
@@ -56,7 +56,7 @@
         <td class="text-center">{{obj.integral_num}}</td>
         <td class="text-center">
           <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑广告</a>
-          <a ng-click="seeprizelist(obj.id)" class="btn btn-info btn-xs">删除</a>
+          <a ng-click="delete(obj.ad_id)" class="btn btn-info btn-xs">删除</a>
         </td>
       </tr>
     </tbody>
