--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -692,27 +692,25 @@
 						<input type="number" min="0" max="100" name="lrl" class="form-control" placeholder="利润率" ng-model="salefrobj.profit_ratio" />
 					</div>
 					<div class="col-xs-1 mt10">(%)</div>
-					
-					
-					      <!--<tr>
-					        <th class="col-md-6 text-center">分享标题</th>
-					        <th class="col-md-4 text-center">利润率(%)</th>
-					      </tr>
-					      <tr>
-					        <td class="text-center" ng-model="salefrobj.share_title">
-								<input type="text" class="form-control" placeholder="分享标题" ng-model="salefrobj.share_title" />
-							</td>
-					        <td class="text-center" ng-model="salefrobj.profit_ratio">
-								<input type="number" class="form-control" placeholder="利润率" ng-model="salefrobj.profit_ratio" />
-							</td>
-					      </tr>-->
 				</div>
+					<br/>
+					<br/>
+				<div class="col-xs-12" >
+					<!--<div class="col-xs-1"></div>-->
+					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">宜买说&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-8 text-right">
+						<textarea rows="4" class="form-control" placeholder="商品描述" ng-model="salefrobj.sk_shop_info">	
+						</textarea>
+					</div>
+				</div>
+
+
 			</div>
 		</div>
 	</div>
 </div>
-
-
 
 
 <div class="col-xs-12 " ng-show="funobj.hasOwnProperty('govsubsidy')">
