--- a/app/22busscustomer/views/addad.html
+++ b/app/22busscustomer/views/addad.html
@@ -1,3 +1,4 @@
+
 <form class="form-horizontal" role="form">
  
  <div class="col-md-10 col-md-offset-1">
@@ -171,6 +172,11 @@
       ng-model="info.sort">
    </div>    
  </div>
+
+ </p >
+    <script id="editor1" name="content" type="text/plain" style="width:100%;height:500px;"></script>     
+  <p>
+
 
 
  <div>
