--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -834,7 +834,8 @@
 			<div class="col-xs-10" 
 				ng-show="affirm.sysaffirm_target_code == 'langdao' 
 				|| affirm.sysaffirm_target_code == 'huaxiapiaolian' 
-				|| affirm.sysaffirm_target_code == 'royaloc' ">
+				|| affirm.sysaffirm_target_code == 'royaloc' 
+				|| affirm.sysaffirm_target_code == 'supply_tstc' ">
 				<div class="form-group">
 					<label class="col-xs-2 control-label">商品id</label>
 					<div class="col-xs-10">
