--- a/app/22busscustomer/views/creatbargain.html
+++ b/app/22busscustomer/views/creatbargain.html
@@ -19,7 +19,7 @@
       <label for="inputDate" class="col-sm-4 control-label">活动开始时间：</label>
       <div class="col-md-6">
         <div class="input-group col-sm-12">
-        <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+        <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.startTime" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
@@ -31,7 +31,7 @@
       <label for="inputDate" class="col-sm-4 control-label">活动结束时间：</label>
       <div class="col-md-6">
         <div class="input-group col-sm-12">
-        <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
+        <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.endTime" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
