--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -705,7 +705,18 @@
 						</textarea>
 					</div>
 				</div>
-
+					<br/>
+					<br/>
+				<div class="col-xs-12" >
+					<!--<div class="col-xs-1"></div>-->
+					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">红包上线&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-8 text-right">
+						<textarea rows="4" class="form-control" placeholder="商品描述" ng-model="salefrobj.rebate_unlimited">	
+						</textarea>
+					</div>
+				</div>
 
 			</div>
 		</div>
