--- a/app/22busscustomer/views/addnewsrolling.html
+++ b/app/22busscustomer/views/addnewsrolling.html
@@ -46,6 +46,14 @@
  </div>
  </div>
 
+ <div class="form-group">
+ <label for="inputDate" class="col-sm-4 control-label">链接：</label>
+ <div class="col-md-6">
+ <input type="text" class="form-control" id="inputpoolname" placeholder=""
+      ng-model="info.url"
+      >
+ </div>    
+ </div>
 
  <div class="form-group">
  <label for="inputDate" class="col-sm-4 control-label">备注：</label>
