--- a/app/22busscustomer/views/prizelist.html
+++ b/app/22busscustomer/views/prizelist.html
@@ -33,7 +33,7 @@
         <td class="text-center">{{obj.targetPrice}}</td>
         <td class="text-center">
           <a ng-click="edit(obj.prizeId)" class="btn btn-info btn-xs">编辑</a>
-          <a ng-click="delete(obj.id)" class="btn btn-info btn-xs">删除</a>
+          <a ng-click="delete(obj.prizeId)" class="btn btn-info btn-xs">删除</a>
         </td>
       </tr>
     </tbody>
