--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 
-	<div class="form-group">
+	<!-- <div class="form-group">
 	    <label class="col-sm-2 control-label">有效时间</label>
 	    <div class="col-sm-10">
 
@@ -59,7 +59,7 @@
 	        </p>
 
 	    </div>
-	  </div>
+	  </div> -->
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">允许消票</label>
