--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -117,7 +117,8 @@
         <td class="">{{obj.title}}</td>
         <td class="text-center">
           <br>{{obj.code}}<br>
-          <span ng-show="obj.out_order_id">外部：{{obj.out_order_id}}</span>
+          <span ng-show="obj.out_order_id">外部分销：{{obj.out_order_id}}</span>
+          <br> <span ng-show="obj.supply_order_id">供应商：{{obj.supply_order_id}}</span>
         </td>
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
         <td class="text-center">
