添加轮播图编辑功能

--- a/app/22busscustomer/views/adlist.html
+++ b/app/22busscustomer/views/adlist.html
@@ -53,9 +53,9 @@
         <td class="text-center" ng-show="obj.integral_type==2">提现积分</td>
         <td class="text-center">{{obj.max_people}}</td>
         <td class="text-center">{{obj.max_integral}}</td>
-        <td class="text-center">{{obj.max_integral/obj.max_people}}</td>
+        <td class="text-center">{{obj.integral_num}}</td>
         <td class="text-center">
-          <!-- <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑广告</a> -->
+          <a ng-click="edit(obj.ad_id)" class="btn btn-info btn-xs">编辑广告</a>
           <a ng-click="delete(obj.ad_id)" class="btn btn-info btn-xs">删除</a>
         </td>
       </tr>
