--- a/app/22busscustomer/views/bargainlist.html
+++ b/app/22busscustomer/views/bargainlist.html
@@ -45,7 +45,7 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title}}</td>
-        <td class="text-center">{{obj.startTime}}-{{obj.endTime}}</td>
+        <td class="text-center">{{obj.startTime}}--{{obj.endTime}}</td>
         <td class="text-center" ng-show="obj.status==0">开始</td>
         <td class="text-center" ng-show="obj.status==1">结束</td>
         <td class="text-center">
