--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -21,7 +21,7 @@
    						<div class="col-md-6">
 		   					<ui-select ng-model="searchform.selected" theme="bootstrap">
 								<ui-select-match placeholder="请选择一个销售品作为奖品">{{$select.selected.name}}</ui-select-match>
-								<ui-select-choices group-by="'place_name'" repeat="item in datas | filter: $select.search" on-click="aaa()">
+								<ui-select-choices group-by="'place_name'" repeat="item in datas | filter: $select.search">
 									<span ng-bind-html="item.name | highlight: $select.search"></span>
 									<small ng-bind-html="item.code | highlight: $select.search"></small>
 								</ui-select-choices>
@@ -42,7 +42,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">砍价目标</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入砍价目标"
 							ng-model="info.targetPrice"
 							>
 						</div>
@@ -51,7 +51,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">允许最大参与人数</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入允许最大参与人数"
 							ng-model="info.allowableNumber"
 							>
 						</div>
@@ -60,7 +60,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">奖品说明</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="奖品说明"
 							ng-model="info.description"
 							>
 						</div>
@@ -86,7 +86,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">奖品标题</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入奖品标题"
 							ng-model="info.title"
 							>
 						</div>
@@ -95,7 +95,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">奖品总数量</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入奖品总数量"
 							ng-model="info.totalnum"
 							>
 						</div>
@@ -104,7 +104,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">卖出去的数量</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入卖出去的数量"
 							ng-model="info.sellnum"
 							>
 						</div>
