杀价帮更改

--- a/app/22busscustomer/views/addinstruction.html
+++ b/app/22busscustomer/views/addinstruction.html
@@ -10,8 +10,7 @@
   <label for="inputDate" class="col-sm-2 control-label">说明标识</label>
   <div class="col-md-9">
   <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="saveinfo.title_identifier"
-      >
+      ng-model="saveinfo.title_identifier" ng-disabled="editinfo.flag == '0'">
   </div>    
  </div>
 
