--- a/app/22busscustomer/views/vouchersalecreate.html
+++ b/app/22busscustomer/views/vouchersalecreate.html
@@ -107,7 +107,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">颜色</label>
 						<div class="col-xs-9">
-							<input type="text" class="form-control" placeholder=""
+							<input type="color" class="form-control" placeholder="" value="#ff0080" 
 							ng-model="obj.color"
 							>
 						</div>
