--- a/app/22busscustomer/views/prizelist.html
+++ b/app/22busscustomer/views/prizelist.html
@@ -29,8 +29,8 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title}}</td>
-        <td class="text-center">{{obj.oldPrice}}</td>
-        <td class="text-center">{{obj.targetPrice}}</td>
+        <td class="text-center">{{obj.oldPrice/100}}</td>
+        <td class="text-center">{{obj.targetPrice/100}}</td>
         <td class="text-center">
           <a ng-click="edit(obj.prizeId)" class="btn btn-info btn-xs">编辑</a>
           <a ng-click="delete(obj.prizeId)" class="btn btn-info btn-xs">删除</a>
