--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -809,7 +809,7 @@
 			</button>
 		</div>
 		<div class="panel-body">
-			<div class="container-fluid">
+			<div class="container-fluid form-group">
 				<div class="col-xs-12" >
 					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
@@ -826,10 +826,17 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-2 text-right">
+					<div class="col-xs-8">
+						<div class="input-group">							
+							<input type="number" class="form-control" placeholder="利润率" min='0'
+							ng-model="salefrobj.profit_ratio">
+							<span class="input-group-addon">%</span>
+						</div>
+					</div>
+					<!--<div class="col-xs-2 text-right">
 						<input type="number" min="0" max="100" name="lrl" class="form-control" placeholder="利润率" ng-model="salefrobj.profit_ratio" />
 					</div>
-					<div class="col-xs-1 mt10">(%)</div>
+					<div class="col-xs-1 mt10">(%)</div>-->
 				</div>
 					<br/>
 					<br/>
@@ -845,15 +852,19 @@
 				</div>
 					<br/>
 					<br/>
-				<div class="col-xs-12" >
-					<!--<div class="col-xs-1"></div>-->
+				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">红包上线&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-8 text-right">
-						<textarea rows="4" class="form-control" placeholder="商品描述" ng-model="salefrobj.rebate_unlimited">	
-						</textarea>
+					<div class="col-xs-8">
+						<div class="input-group">
+							<span class="input-group-addon">¥</span>
+							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0'
+							ng-model="salefrobj.rebate_unlimited"
+								>
+						</div>
 					</div>
+					
 				</div>
 
 			</div>
