--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -810,7 +810,7 @@
 		</div>
 		<div class="panel-body">
 			<div class="container-fluid form-group">
-				<div class="col-xs-12" >
+				<div class="col-xs-12 form-group" >
 					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
 						<label for="fxbt" class="pull-right text-right mt10">分享标题&nbsp;&nbsp;&nbsp;&nbsp;</label>
@@ -821,7 +821,7 @@
 				</div>
 					<br/>
 					<br/>
-				<div class="col-xs-12" >
+				<div class="col-xs-12 form-group" >
 					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
@@ -840,7 +840,7 @@
 				</div>
 					<br/>
 					<br/>
-				<div class="col-xs-12" >
+				<div class="col-xs-12 form-group" >
 					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">宜买说&nbsp;&nbsp;&nbsp;&nbsp;</label>
