--- a/app/22busscustomer/views/newsrollinglist.html
+++ b/app/22busscustomer/views/newsrollinglist.html
@@ -30,9 +30,11 @@
         <td class="text-center">
           <p ng-show="obj.type==0">宜买宜卖</p>
           <p ng-show="obj.type==1">评价送积分</p>
-          <p ng-show="obj.type==3">义买义卖</p>
-          <p ng-show="obj.type==4">爱心义卖</p>
           <p ng-show="obj.type==5">积分商城</p>
+          <p ng-show="obj.type==6">砍价帮</p>
+          <p ng-show="obj.type==7">看看转</p>
+          <p ng-show="obj.type==8">领红包</p>
+          <p ng-show="obj.type==9">一元券</p>
         </td>
         <td class="text-center">
           <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑</a>
