宜买说去掉积分配置弄成不可添加删除

--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -769,23 +769,23 @@
 					      <tr>
 					        <th class="col-md-6 text-center">销售品类型</th>
 					        <th class="col-md-2 text-center">积分</th>
-					        <th class="col-md-2 text-center" ng-show="funobj.hasOwnProperty('integral')">操作</th>
+					        <!--<th class="col-md-2 text-center" ng-show="funobj.hasOwnProperty('integral')">操作</th>-->
 					      </tr>
 					    </thead>
 					    <tbody>
 					      <tr ng-repeat="obj in salejfobj.list">
-					        <td class="text-center" ng-show="obj.integral_type == 0">最高可用积分</td>
+					        <td class="text-center">最高可用积分</td>
 					        <!-- <td class="text-center" ng-show="obj.integral_type == 0">提现积分</td>
 					        <td class="text-center" ng-show="obj.integral_type == 1">抵值积分</td> -->
 					        <td class="text-center">
-					          <input type="text" class="btn btn-block btn-default" placeholder="积分" ng-model="obj.integral_price" />
+					          <input type="number" min="0" class="btn btn-block btn-default" placeholder="积分" ng-model="obj.integral_price" />
 					        </td>
-					        <td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
+					        <!--<td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
 					          	<a 	ng-click="deljf(obj.id)" 
 					          		class="btn btn-warning btn-xs">
 					          		删除
 					        	</a>
-					        </td>
+					        </td>-->
 					      </tr>
 					    </tbody>
 				  	</table>
@@ -838,10 +838,9 @@
 					</div>
 					<div class="col-xs-1 mt10">(%)</div>-->
 				</div>
-					<br/>
+					<!--<br/>
 					<br/>
 				<div class="col-xs-12 form-group" >
-					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">宜买说&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
@@ -849,12 +848,12 @@
 						<textarea rows="4" class="form-control" placeholder="商品描述" ng-model="salefrobj.sk_shop_info">	
 						</textarea>
 					</div>
-				</div>
+				</div>-->
 					<br/>
 					<br/>
 				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">红包上线&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label for="lrl" class="pull-right text-right mt10">红包上限&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-8">
 						<div class="input-group">
