--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -3,49 +3,58 @@
 	<div class="col-xs-12 col-md-12 mt10" >
 
 		<div class="form-group">
-			<label class="col-xs-3 control-label">销售品名称</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 control-label"></label>
+			<div class="col-sm-9 col-xs-12">
+				<button type="button" class="btn btn-success btn-lg btn-block"
+				ng-click="save()"
+				>保存</button>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-3 col-xs-12 control-label">销售品名称</label>
+			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control" placeholder="请输入销售品名称" 
 				ng-disabled="model.id != undefined"
-				ng-model="model.name"
+				ng-model="saleobj.name"
 				>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-xs-3 control-label">市场价格</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 col-xs-12 control-label">市场价格</label>
+			<div class="col-sm-9 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" 
 					placeholder="请输入市场价格" min='0'
-					ng-model="model.market_price"
+					ng-model="saleobj.market_price"
 					>
 				</div>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-xs-3 control-label">居游价格</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 col-xs-12 control-label">居游价格</label>
+			<div class="col-sm-9 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" 
 					placeholder="请输入居游价格" min='0'
-					ng-model="model.guide_price"
+					ng-model="saleobj.guide_price"
 					>
 				</div>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-xs-3 control-label">分销商成本价格</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 col-xs-12 control-label">分销商成本价格</label>
+			<div class="col-sm-9 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" 
 					placeholder="请输入分销商成本价格" min='0'
-					ng-model="model.cost_price"
+					ng-model="saleobj.cost_price"
 					>
 				</div>
 			</div>
@@ -53,42 +62,23 @@
 
 		<!-- ng-disabled="saleobj.id != ''" -->
 		<div class="form-group" >
-			<label class="col-xs-3 control-label">销售品分类</label>
-			<div class="col-xs-9" >
-				<select class="form-control" ng-model="saleobj.sale_category" 
-	              ng-options="type1.value as type1.label for type1 in typearr"
-	            >
-	            </select>
+			<label class="col-sm-3 col-xs-12 control-label">销售品分类</label>
+			<div class="col-sm-9  col-xs-12" >
+				<ui-select ng-model="saleobj.sale_category" theme="bootstrap"
+		          ng-change="changeCategory()"
+		          >
+		            <ui-select-match placeholder="请选择一个销售品分类">{{$select.selected.label}}</ui-select-match>
+		            <ui-select-choices 
+		            repeat="item.value as item in page.categorylist | filter: $select.search">
+		              <span ng-bind-html="item.label | highlight: $select.search"></span>
+		            </ui-select-choices>
+		        </ui-select>
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-3 control-label">短信模板编号</label>
-			<div class="col-xs-9">
-				<!-- <input type="text" class="form-control" placeholder="请输入短信模板编号"
-				ng-model="saleobj.sms_template_id"
-				> -->
-				<select class="form-control" ng-model="saleobj.sms_template_id" 
-				ng-change="changesms(saleobj)"
-	              ng-options="sms.sms_template_id as sms.sms_template_id for sms in smsarr"
-	            >
-	            	<option value="">  -- 空 --  </option>
-	            </select>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<label class="col-xs-3 control-label">短信追加内容</label>
-			<div class="col-xs-9">
-				<textarea class="form-control" rows="3"
-				ng-model="saleobj.sms_diy"
-				></textarea>
-			</div>
-		</div>
-
-		<div class="form-group">
-		    <label class="col-xs-3 control-label">短信发送类型</label>
-		    <div class="col-xs-9">
+		<div class="form-group" >
+		    <label class="col-sm-3 col-xs-12 control-label">短信发送类型</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sms_type" value="1"
 				  ng-model="saleobj.sms_type"
@@ -102,33 +92,58 @@
 		    </div>
 	  	</div>
 
+		<div class="form-group" ng-show="saleobj.sms_type == 1">
+			<label class="col-sm-3 col-xs-12 control-label">短信模板编号</label>
+			<div class="col-sm-9 col-xs-12">
+				<select class="form-control" ng-model="saleobj.sms_template_id" 
+				ng-change="changeSms(saleobj)"
+	              ng-options="sms.sms_template_id as sms.sms_template_id for sms in page.smslist"
+	            >
+	            	<option value="">  -- 空 --  </option>
+	            </select>
+			</div>
+		</div>
+
+		<div class="form-group" ng-show="saleobj.sms_type == 1">
+			<label class="col-sm-3 col-xs-12 control-label">短信追加内容</label>
+			<div class="col-sm-9 col-xs-12">
+				<textarea class="form-control" rows="3"
+				ng-model="saleobj.sms_diy"
+				></textarea>
+			</div>
+		</div>
+
+		
+
 	  	<div class="form-group">
-			<label class="col-xs-3 control-label">销售品图片</label>
-			<div class="col-xs-3">
+			<label class="col-sm-3 col-xs-12 control-label">销售品图片</label>
+			<div class="col-sm-3 col-xs-12">
 				<img ng-src="{{saleobj.top_pic}}" width="250" height="150" ng-model="saleobj.top_pic">
-				<input type="file" nv-file-select uploader="uploader1" />
+				<input type="file" nv-file-select uploader="baseinfo.imageshow.uploader1" />
 				<br>
 				<ul class="list-group">
-				    <li class="list-group-item" ng-repeat="item in uploader1.queue">
+				    <li class="list-group-item" 
+				    ng-repeat="item in baseinfo.imageshow.uploader1.queue">
 				        文件名: <span ng-bind="item.file.name"></span>
 				        <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
 				        <div class="progress mt10">
-				            <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader1.progress + '%' }"></div>
+				            <div class="progress-bar" role="progressbar" ng-style="{ 'width': baseinfo.imageshow.uploader1.progress + '%' }"></div>
 				        </div>
 				    </li>
 				</ul>
 			</div>
-			<label class="col-xs-1 control-label">logo</label>
-			<div class="col-xs-3">
+			<label class="col-sm-1 col-xs-12 control-label">logo</label>
+			<div class="col-sm-3  col-xs-12">
 				<img ng-src="{{saleobj.logo}}" width="250" height="150" ng-model="saleobj.logo">
-				<input type="file" nv-file-select uploader="uploader2" />
+				<input type="file" nv-file-select uploader="baseinfo.imageshow.uploader2" />
 				<br>
 				<ul class="list-group">
-				    <li class="list-group-item" ng-repeat="item in uploader2.queue">
+				    <li class="list-group-item" 
+				    ng-repeat="item in baseinfo.imageshow.uploader2.queue">
 				        文件名: <span ng-bind="item.file.name"></span>
 				        <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
 				        <div class="progress mt10">
-				            <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader2.progress + '%' }"></div>
+				            <div class="progress-bar" role="progressbar" ng-style="{ 'width': baseinfo.imageshow.uploader2.progress + '%' }"></div>
 				        </div>
 				    </li>
 				</ul>
@@ -137,20 +152,20 @@
 
 			<div class="form-group">
 				<form class="form-inline">
-				<label class="col-xs-3 control-label">有效期</label>&nbsp;&nbsp;
+				<label class="col-sm-3 col-xs-12 control-label">有效期</label>&nbsp;&nbsp;
               	<div class="input-group">
                   	<input 	type="text" 
 							class="form-control"
-							ng-model="start_time"
+							ng-model="baseinfo.dateshow.periodstart.date"
 							uib-datepicker-popup="yyyy-MM-dd" 
-							is-open="section.start.opened" 
+							is-open="baseinfo.dateshow.periodstart.opened" 
 							ng-required="true" 
 							close-text="Close" 
 							readonly/>
 					 <span 	class="input-group-btn">
 							<button type="button" 
 								class="btn btn-default"
-								ng-click="open(section.start)">
+								ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodstart)">
 							<i class="glyphicon glyphicon-calendar"></i>
 						</button>
 					</span>
@@ -159,16 +174,16 @@
 				<div class="input-group">
 					<input 	type="text" 
 							class="form-control"
-							ng-model="end_time"
+							ng-model="baseinfo.dateshow.periodend.date"
 							uib-datepicker-popup="yyyy-MM-dd" 
-							is-open="section.end.opened" 
+							is-open="baseinfo.dateshow.periodend.opened" 
 							ng-required="true" 
 							close-text="Close" 
 							readonly/>
 					<span class="input-group-btn">
 						<button type="button" 
                     			class="btn btn-default" 
-                    			ng-click="open(section.end)">
+                    			ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodend)">
                     		<i class="glyphicon glyphicon-calendar"></i>
                     	</button>
                   </span>
@@ -177,7 +192,7 @@
           		&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
 
-		<div class="form-group">
+<!-- 		<div class="form-group">
 			<form class="form-inline">
 				<label class="col-xs-3 control-label">
 					不可用日期
@@ -259,23 +274,25 @@
 				</div>
 			</form>
 		</div>
-        
+         -->
 		
-
+		<!-- ng-disabled="saleobj.state != 0 && saleobj.id != ''" -->
 		<div class="form-group mt10">
-		    <label class="col-xs-3 control-label">产品所属</label>
-		    <div class="col-xs-9" >
-				<select class="form-control" ng-model="saleobj.sale_belong" 
-				  ng-disabled="saleobj.state != 0 && saleobj.id != ''"
-	              ng-options="sale_belong.value as sale_belong.label for sale_belong in sale_belongarr"
-	            >
-	            </select>
+		    <label class="col-sm-3 col-xs-12 control-label">产品所属</label>
+		    <div class="col-sm-9 col-xs-12">
+		    	<ui-select ng-model="saleobj.sale_belong" theme="bootstrap">
+		            <ui-select-match placeholder="请选择一个产品所属">{{$select.selected.label}}</ui-select-match>
+		            <ui-select-choices 
+		            repeat="item.value as item in page.salebelonglist | filter: $select.search">
+		              <span ng-bind-html="item.label | highlight: $select.search"></span>
+		            </ui-select-choices>
+		        </ui-select>
 			</div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">系统确认</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">系统确认</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sys_affirm_type" value="0"
 				  ng-model="saleobj.sys_affirm_type"
@@ -290,8 +307,8 @@
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">支付类型</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">支付类型</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="pay_type" value="0"
 				  ng-model="saleobj.pay_type"
@@ -306,8 +323,8 @@
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">库存类型</label>
-		    <div class="col-xs-2">
+		    <label class="col-sm-3 col-xs-12 control-label">库存类型</label>
+		    <div class="col-sm-2 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="stock_type" value="0"
 				  ng-model="saleobj.stock_type"
@@ -319,15 +336,15 @@
 				  > 启用
 				</label>
 		    </div>
-		    <div class="col-xs-2" ng-show="saleobj.stock_type == 1">
+		    <div class="col-sm-2 col-xs-12" ng-show="saleobj.stock_type == 1">
 		    	<input type="number" class="form-control" placeholder="预存数量" min='0' ng-model="saleobj.current_stock_num"
 					>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">销售目标</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">销售目标</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sale_target_type" value="0"
 				  ng-model="saleobj.sale_target_type"
@@ -342,45 +359,45 @@
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">生效时间</label>
-		    <div class="col-xs-5">
+		    <label class="col-sm-3 col-xs-12 control-label">生效时间</label>
+		    <div class="col-sm-5 col-xs-12">
 		    	<select class="form-control" 
 		    	  ng-model="saleobj.take_effect_type" 
-	              ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in take_effect_typearr"
+	              ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in page.take_effect_typearr"
 	            >
 	            </select>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">最大购买数量限制</label>
-		    <div class="col-xs-2">
+		    <label class="col-sm-3 col-xs-12 control-label">最大购买数量限制</label>
+		    <div class="col-sm-2 col-xs-12">
 		    	<input type="number" class="form-control" 
 				ng-model="saleobj.max_limit"
 				>
 				
 		    </div>
-		    <div class="col-sm-5">
+		    <div class="col-sm-5 col-xs-12">
 		      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">每单最大购买数量限制</label>
-		    <div class="col-xs-2">
+		    <label class="col-sm-3 col-xs-12 control-label">每单最大购买数量限制</label>
+		    <div class="col-sm-2 col-xs-12">
 		    	<input type="number" class="form-control" 
 				ng-model="saleobj.order_num_limit"
 				>
 				
 		    </div>
-		    <div class="col-sm-5">
+		    <div class="col-sm-5 col-xs-12">
 		      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">是否启用出游时间</label>
-		    <div class="col-xs-2">
+		    <label class="col-sm-3 col-xs-12 control-label">是否启用出游时间</label>
+		    <div class="col-sm-2 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="tour_date_type" value="0"
 				  ng-model="saleobj.tour_date_type"
@@ -392,15 +409,15 @@
 				  > 启用
 				</label>
 		    </div>
-		    <div class="col-xs-7">
+		    <div class="col-sm-7 col-xs-12">
 		      <p class="form-control-static text-danger" >
 		      启用出游时间后，该销售品只能在出游日期当天使用</p>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">是否允许退票</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">是否允许退票</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="back_type" value="0"
 				  ng-model="saleobj.back_type"
@@ -415,8 +432,8 @@
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">是否出票</label>
-		    <div class="col-xs-2">
+		    <label class="col-sm-3 col-xs-12 control-label">是否出票</label>
+		    <div class="col-sm-2 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="ticket_type" value="0"
 				  ng-model="saleobj.ticket_type"
@@ -428,15 +445,15 @@
 				  > 不出票
 				</label>
 		    </div>
-		    <div class="col-xs-7">
+		    <div class="col-sm-7 col-xs-12">
 		      <p class="form-control-static text-danger" >
 		      该选项请慎重使用，如果选择’不出票‘该销售品将不会出票也不发短信！</p>
 		    </div>
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">是否实名制</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">是否实名制</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="user_status" value="0"
 				  ng-model="saleobj.user_status"
@@ -451,8 +468,8 @@
 	  	</div>
 
 	  	<div class="form-group">
-		    <label class="col-xs-3 control-label">短信票码类型</label>
-		    <div class="col-xs-9">
+		    <label class="col-sm-3 col-xs-12 control-label">短信票码类型</label>
+		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sms_ticketcode_type" value="0"
 				  ng-model="saleobj.sms_ticketcode_type"
@@ -467,8 +484,8 @@
 	  	</div>
 
 	  	<div class="form-group">
-			<label class="col-xs-3 control-label">团产品-预定须知</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 col-xs-12 control-label">团产品-预定须知</label>
+			<div class="col-sm-9 col-xs-12">
 				<textarea class="form-control" rows="3"
 				ng-model="saleobj.bookingnotes"
 				></textarea>
@@ -476,9 +493,18 @@
 		</div>
 
 	  	<div class="form-group">
-			<label class="col-xs-3 control-label">销售品简介</label>
-			<div class="col-xs-9">
+			<label class="col-sm-3 col-xs-12 control-label">销售品简介</label>
+			<div class="col-sm-9 col-xs-12">
 				<div text-angular ng-model="saleobj.detail"></div>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-3 col-xs-12 control-label"></label>
+			<div class="col-sm-9 col-xs-12">
+				<button type="button" class="btn btn-primary btn-lg btn-block"
+				ng-click="save()"
+				>保存</button>
 			</div>
 		</div>
 
