--- a/app/08view/views/viewmodel.html
+++ b/app/08view/views/viewmodel.html
@@ -33,6 +33,15 @@
 						</div>
 					</div>
 
+					<div class="form-group">
+						<label class="col-xs-2 control-label">子名称</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" 
+							ng-model="placeobj.subname"
+							>
+						</div>
+					</div>
+
 
 					<div class="form-group">
 						<label class="col-xs-2 control-label">地址</label>
@@ -78,6 +87,7 @@
 							>
 						</div>
 					</div> -->
+
 					<div class="form-group" >
 						<label class="col-xs-2 control-label">市</label>
 						<div class="col-xs-10" >
@@ -88,11 +98,29 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-2 control-label">区</label>
 						<div class="col-xs-10">
 							<input type="text" class="form-control" 
 							ng-model="placeobj.area"
+							>
+						</div>
+					</div> -->
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">区</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" 
+							ng-model="placeobj.district"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">商圈</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" 
+							ng-model="placeobj.business_district"
 							>
 						</div>
 					</div>
@@ -111,6 +139,58 @@
 							>
 						</div>
 					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">预订须知</label>
+						<div class="col-xs-10">
+							<!-- <textarea class="form-control" rows="3"
+							ng-model="viewobj.book_info"
+							></textarea> -->
+							<div text-angular ng-model="placeobj.book_info"></div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">开放日期</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" 
+							ng-model="placeobj.open_date"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">排序</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" 
+							ng-model="placeobj.asort"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">主题</label>
+						<div class="col-xs-10">
+				            <input type="text" class="form-control" 
+							ng-model="placeobj.theme"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">星级</label>
+						<div class="col-xs-10">
+							<select class="form-control" ng-model="placeobj.star" >
+								<option value="1">1</option>
+								<option value="2">2</option>
+								<option value="3">3</option>
+								<option value="4">4</option>
+								<option value="5">5</option>
+				            </select>
+						</div>
+					</div>
+
+
 				</div>
 
 				<div class="col-xs-4">
@@ -157,6 +237,13 @@
 					</div>
 
 					<div class="form-group">
+						<label class="col-xs-2 control-label">子名称</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{place.subname}}</p>
+						</div>
+					</div>
+
+					<div class="form-group">
 						<label class="col-xs-2 control-label">地址</label>
 						<div class="col-xs-10">
 							<p class="form-control-static">{{placeobj.address}}</p>
@@ -191,10 +278,24 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-2 control-label">区</label>
 						<div class="col-xs-10">
 							<p class="form-control-static">{{placeobj.area}}</p>
+						</div>
+					</div> -->
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">区</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{placeobj.district}}</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">商圈</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{placeobj.business_district}}</p>
 						</div>
 					</div>
 
@@ -208,6 +309,42 @@
 							<p class="form-control-static">{{placeobj.latitude}}</p>
 						</div>
 					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">预订须知</label>
+						<div class="col-xs-10">
+							<p class="form-control-static" ng-bind-html="placeobj.book_info | trustHtml"/>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">开放日期</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{placeobj.open_date}}</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">排序</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{placeobj.asort}}</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">主题</label>
+						<div class="col-xs-10">
+				            <p class="form-control-static">{{placeobj.theme}}</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">星级</label>
+						<div class="col-xs-10">
+							<p class="form-control-static">{{placeobj.star}}</p>
+						</div>
+					</div>
+
 				</div>
 
 				<div class="col-xs-4">
@@ -267,27 +404,27 @@
 			<div ng-show="viewobjstate === 1">
 				<div class="col-xs-6">
 					
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">主题</label>
-						<div class="col-xs-9">
+						<div class="col-xs-9"> -->
 							<!-- <select class="form-control" ng-model="viewobj.theme" 
 				              ng-options="view.code as view.name for view in viewarr"
 				            >
 				            </select> -->
-				            <input type="text" class="form-control" 
+				    <!--         <input type="text" class="form-control" 
 							ng-model="viewobj.theme"
 							>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">子名称</label>
 						<div class="col-xs-9">
 							<input type="text" class="form-control" 
 							ng-model="viewobj.subname"
 							>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">电话</label>
@@ -317,14 +454,14 @@
    						</div>    
  					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">开放日期</label>
 						<div class="col-xs-9">
 							<input type="text" class="form-control" 
 							ng-model="viewobj.open_date"
 							>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">服务承诺</label>
@@ -337,7 +474,7 @@
 
 					
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">星级</label>
 						<div class="col-xs-9">
 							<select class="form-control" ng-model="viewobj.star" >
@@ -348,7 +485,7 @@
 								<option value="5">5</option>
 				            </select>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">好评</label>
@@ -413,28 +550,28 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">排序</label>
 						<div class="col-xs-9">
 							<input type="text" class="form-control" 
 							ng-model="viewobj.asort"
 							>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
 				<div class="col-xs-6">
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">预订须知</label>
-						<div class="col-xs-9">
+						<div class="col-xs-9"> -->
 							<!-- <textarea class="form-control" rows="3"
 							ng-model="viewobj.book_info"
 							></textarea> -->
-							<div text-angular ng-model="viewobj.book_info"></div>
+					<!-- 		<div text-angular ng-model="viewobj.book_info"></div>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
@@ -445,23 +582,23 @@
 			<div ng-show="viewobjstate === 0">
 				<div class="col-xs-6">
 					
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">主题</label>
-						<div class="col-xs-9">
+						<div class="col-xs-9"> -->
 							<!-- <select class="form-control" ng-model="viewobj.theme" 
 				              ng-options="view.code as view.name for view in viewarr"
 				            >
 				            </select> -->
-				            <p class="form-control-static">{{viewobj.theme}}</p>
+				    <!--         <p class="form-control-static">{{viewobj.theme}}</p>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">子名称</label>
 						<div class="col-xs-9">
 							<p class="form-control-static">{{viewobj.subname}}</p>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">电话</label>
@@ -487,13 +624,13 @@
  					</div>
 
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">开放日期</label>
 						<div class="col-xs-9">
 							<p class="form-control-static">{{viewobj.open_date}}</p>
 						</div>
 					</div>
-
+ -->
 					<div class="form-group">
 						<label class="col-xs-3 control-label">服务承诺</label>
 						<div class="col-xs-9">
@@ -503,12 +640,12 @@
 
 					
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">星级</label>
 						<div class="col-xs-9">
 							<p class="form-control-static">{{viewobj.star}}</p>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">好评</label>
@@ -559,23 +696,23 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">排序</label>
 						<div class="col-xs-9">
 							<p class="form-control-static">{{viewobj.asort}}</p>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
 				<div class="col-xs-6">
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-3 control-label">预订须知</label>
 						<div class="col-xs-9">
 							<p class="form-control-static" ng-bind-html="viewobj.book_info | trustHtml"/>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
