--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -4,7 +4,7 @@
   }
 </style>
 
-<div class="col-sm-12">
+<div class="col-sm-12" style="background: #fff; padding-top: 15px;">
     <uib-tabset active="activeForm">
 
       <uib-tab index="0" heading="基本信息">
