--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -499,7 +499,7 @@
 			</div>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group" ng-if="util.what == 'edit'">
 			<label class="col-sm-3 col-xs-12 control-label"></label>
 			<div class="col-sm-9 col-xs-12">
 				<button type="button" class="btn btn-primary btn-lg btn-block"
