--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -12,7 +12,7 @@
 		</div> -->
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">销售品名称1111</label>
+			<label class="col-sm-3 col-xs-12 control-label">销售品名称</label>
 			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control" placeholder="请输入销售品名称" 
 				ng-disabled="model.id != undefined"
