添加奖品加字段

--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -48,13 +48,13 @@
         ></productintegral>
       </uib-tab>
 
-      <!--<uib-tab index="5" heading="销售品分润设置" 
-      ng-if="saleobj.code !== '' && funobj.hasOwnProperty('skprice')">
-        <productintegral
+      <uib-tab index="5" heading="销售品分润设置" 
+      ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
+        <productshareprofit
           saleobj="saleobj"
           util="util"
-        ></productintegral>
-      </uib-tab>-->
+        ></productshareprofit>
+      </uib-tab>
 
     </uib-tabset>
 
