--- a/app/07product/views/p_integral.html
+++ b/app/07product/views/p_integral.html
@@ -1,10 +1,9 @@
-<div class="col-xs-12" ng-show="funobj.hasOwnProperty('integral')" >
+<div class="col-xs-12" >
 
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			积分配置<button type="button" 
 				class="btn btn-xs btn-info pull-right"
-				ng-show="what == 'edit' || saleobj.id == ''"
 				ng-click="salejfsave()">
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
