--- a/app/07product/views/aplist.html
+++ b/app/07product/views/aplist.html
@@ -26,8 +26,9 @@
       <tr>
         <th class="col-md-5 text-center">产品</th>
         <th class="col-md-2 text-center">产品分类</th>
-        <th class="col-md-1 text-center">产品状态</th>
-        <th class="col-md-2 text-center">排序</th>
+        <th class="col-md-1 text-center">成本价</th>
+        <th class="col-md-1 text-center">指导价</th>
+        <th class="col-md-1 text-center">市场价</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
@@ -36,34 +37,15 @@
         <td class="">
           产品名称：{{obj.name}}<br>
           产品编号：{{obj.code}}<br>
-          成本价：{{obj.cost_price}} 元 / 指导价：{{obj.guide_price}} 元 / 市场价：{{obj.market_price}} 元
         </td>
         <td class="text-center">{{obj.sale_category_name}}</td>
-        <td class="text-center">{{obj.state_name}}</td>
-        <td class="form-horizontal ">
-          <div class="col-sm-6">
-            <input class="form-control input-sm" 
-            style="height:22px;" 
-            type="text" 
-            value="{{obj.asort}}" 
-            ng-model="obj.asort">
-          </div>
-          <a ng-click="asort(obj.id, obj.asort)" class="btn btn-info btn-xs">gogo</a> 
-        </td>
+        <td class="text-center">{{obj.cost_price}}</td>
+        <td class="text-center">{{obj.guide_price}}</td>
+        <td class="text-center">{{obj.market_price}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
-          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
-          <a ng-click="edit(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-success btn-xs">编辑</a>
-          <a ng-click="del(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-danger btn-xs">删除</a>
-          <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
-          <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
-          <a ng-click="info(obj.id)" ng-show="obj.state == '1'" class="btn btn-warning btn-xs">详情</a>
-          <a ng-click="distribution(obj.code, obj.sale_target_type)" class="btn btn-default btn-xs"
-          ng-show="obj.sale_target_type == 1"
-          >分配经销商</a>
-          <a ng-click="distribution(obj.code, obj.sale_target_type)" class="btn btn-default btn-xs"
-          ng-show="obj.sale_target_type == 0"
-          >分配不允许销售经销商</a>
+          <a ng-click="info(obj.id)" class="btn btn-warning btn-xs">详情</a>
+          <a ng-click="pass(obj.id)" class="btn btn-success btn-xs">审核通过</a>
+          <a ng-click="nopass(obj.id)" class="btn btn-danger btn-xs">审核不通过</a>
         </td>
       </tr>
     </tbody>
