--- a/app/07product/views/splist.html
+++ b/app/07product/views/splist.html
@@ -39,7 +39,9 @@
           成本价：{{obj.cost_price}} 元 / 指导价：{{obj.guide_price}} 元 / 市场价：{{obj.market_price}} 元
         </td>
         <td class="text-center">{{obj.sale_category_name}}</td>
-        <td class="text-center">{{obj.state_name}}</td>
+        <td class="text-center">{{obj.state_name}}<br/>
+          <span ng-show="obj.sale_apply_state_name != ''" ng-bind="obj.sale_apply_state_name"></span>
+        </td>
         <td class="form-horizontal ">
           <div class="col-sm-6">
             <input class="form-control input-sm" 
