--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -1,37 +1,34 @@
-<div class="col-xs-12" >
-<div class="panel panel-default">
-  <div class="panel-heading text-center">添加卡池</div>
+<div class="modal-header">
+    <h4 class="modal-title">卡池详情</h4>
+</div>
+<div class="modal-body">
 
-<div class="panel-body">
-    <div class="container-fluid form-horizontal ">
-
-<div class="col-xs-10 col-xs-offset-0 form-horizontal" >
-	<div class="form-group">
-		<label class="col-xs-3 control-label">卡池名称:</label>
-		<div class="col-xs-9">
-			<input type="text" class="form-control" 
-			ng-model="cardinfo.pool_name"
-			>
-		</div>
-	</div>
-
-	<div class="form-group">
-	<label class="col-xs-3 control-label">卡池类型:</label>
-	  <div class="col-xs-9">
-         <select class="form-control" ng-model="cardinfo.pool_type">
-            <option value="0">基本</option>
-            <option value="1">金卡</option>
-            <option value="2">商惠卡</option>
-          <select>
-      </div>  
+<div class="container-fluid form-horizontal">
+    
+    <div class="form-group" >
+    	<label class="col-xs-1 control-label"></label>
+        <label class="col-xs-2 control-label">卡池名称</label>
+        <div class="col-xs-6" >
+            <input type="text" class="form-control" ng-model="cardinfo.pool_name">
+        </div>
     </div>
 
-    <button type="button" class="btn btn-info search pull-right" ng-click="savecardpool()">添加卡池</button>
-	
+    <div class="form-group" >
+    	<label class="col-xs-1 control-label"></label>
+        <label class="col-xs-2 control-label">卡池类型</label>
+        <div class="col-xs-6" >
+            <select class="form-control" ng-model="cardinfo.pool_type"
+              ng-options="type.value as type.label for type in typearr"
+            >
+          </select>
+        </div>
+    </div>
+    
 </div>
-
 </div>
-</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" type="button" ng-click="savecardpool()">保存</button>
+    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
 
 
