--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -370,13 +370,13 @@
       </table>
 	</div>
 
-	<button 
+	<!--<button 
     type="button" 
     class="btn btn-info col-xs-1 pull-right" 
     ng-click="submit()"
     >
     提交
-    </button>
+    </button>-->
 
 </div>
 
