--- a/app/21card/views/cardproductlist.html
+++ b/app/21card/views/cardproductlist.html
@@ -2,13 +2,26 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="form-group form-inline">
-            <div class="col-sm-12 row">
-                  <input type="text" class="form-control" ng-model="searchform.name" placeholder="卡产品名称" style="width:250px">
+            <div class="col-sm-12">
+                   <input type="text" class="form-control" ng-model="searchform.code" placeholder="产品编号">
                   &nbsp;&nbsp;&nbsp;&nbsp;
-                  <div class="form-group pull-right">
-                      <button type="button" class="btn btn-success" ng-click="create()">创建卡产品</button>
-                      <button type="button" class="btn btn-primary" ng-click="search()">立即搜索</button>&nbsp;&nbsp;&nbsp;&nbsp;
-                  </div>
+                  <input type="text" class="form-control" ng-model="searchform.name" placeholder="产品名称">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="机构编号">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <label class="control-label">产品类型</label>&nbsp;&nbsp;
+                  <select class="form-control" ng-model="searchform.card_type"
+		              ng-options="type.value as type.label for type in typearr">
+		            	<option label="查询全部" value=""></option>
+	              </select>
+	              &nbsp;&nbsp;&nbsp;&nbsp;
+	              <label class="control-label">产品状态</label>&nbsp;&nbsp;
+                  <select class="form-control" ng-model="searchform.state"
+		              ng-options="state.value as state.label for state in statearr">
+		            	<option label="查询全部" value=""></option>
+	              </select>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="search()">立即搜索</button>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="create()">创建产品</button>
             </div>
         </div>
     </div>
@@ -18,32 +31,40 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">卡产品名称</th>
-        <th class="col-md-1 text-center">卡产品类型</th>
+      	<th class="col-md-2 text-center">产品编号</th>
+        <th class="col-md-4 text-center">产品名称</th>
+        <th class="col-md-1 text-center">产品类型</th>
         <th class="col-md-1 text-center">市场价格</th>
         <th class="col-md-1 text-center">指导价格</th>
-        <th class="col-md-2 text-center">绑定卡池名称</th>
-        <th class="col-md-2 text-center">绑定票销售品编号</th>
-        <th class="col-md-1 text-center">状态</th>
-        <th class="col-md-2 text-center">操作</th>
+        <!--<th class="col-md-2 text-center">绑定卡池名称</th>
+        <th class="col-md-2 text-center">绑定票销售品编号</th>-->
+        <th class="col-md-1 text-center">产品状态</th>
+        <th class="col-md-1 text-center">所属机构</th>
+        <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
+      	<td class="text-center">{{obj.code}}</td>
         <td class="text-center">{{obj.name}}</td>
         <td class="text-center">{{obj.card_type_name}}</td>
-        <td class="text-center">{{obj.market_price}}</td>
-        <td class="text-center">{{obj.guide_price}}</td>
-        <td class="text-center">{{obj.pool_name}}</td>
-        <td class="text-center">{{obj.ticket_code}}</td>
+        <td class="text-center">{{obj.market_price | currency : '￥'}}</td>
+        <td class="text-center">{{obj.guide_price | currency : '￥'}}</td>
+        <!--<<td class="text-center">{{obj.pool_name}}</td>
+        <td class="text-center">{{obj.ticket_code}}</td>-->
         <td class="text-center">{{obj.state_name}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="edit(obj.id, obj.state)" class="btn btn-info btn-xs">编辑</a>
-          <a ng-show="obj.state=='0' || obj.state=='2'"
-          ng-click="start(obj.code)" class="btn btn-danger btn-xs">上架</a>
-          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="check(obj.id)" class="btn btn-info btn-xs">查看</a>
+        	{{obj.company_name}}<br>
+     		{{obj.company_code}}
+        </td>
+        <td class="text-center">
+        	<a ng-show="obj.state=='0' || obj.state=='2'"
+          	ng-click="start(obj.code)" class="btn btn-danger btn-xs">上架</a>
+          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="edit(obj.id, obj.state)" class="btn btn-success btn-xs">编辑</a>
           <a ng-show="obj.state=='1'"
-          ng-click="stop(obj.code)" class="btn btn-success btn-xs">下架</a>
+          ng-click="stop(obj.code)" class="btn btn-primary btn-xs">下架</a>
+          <a ng-show="obj.state=='1'" ng-click="check(obj.id)" class="btn btn-warning btn-xs">详情</a>
+          
         </td>
         </th>
       </tr>
